adding images to documenation

--- a/Inspection_Bot/Documentation/Documenation.tex
+++ b/Inspection_Bot/Documentation/Documenation.tex
@@ -4,8 +4,28 @@
 
 \documentclass[12pt]{article}
 
+\usepackage{graphicx}
+
 \begin{document}
 \maketitle
+
+\section{Volume Analysis Setup}
+\includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0604.JPG}
+
+\section{Volume Image Processing}
+\includegraphics{images/volume_image_processing/led_image.png}
+\includegraphics{images/volume_image_processing/laser_image.png}
+\includegraphics{images/volume_image_processing/binary_led_image.png}
+\includegraphics{images/volume_image_processing/binary_laser_image.png}
+\includegraphics{images/volume_image_processing/union_laser_led_binaries.png}
+
+\section{Volume Results}
+\includegraphics{images/volume_results/solder_led_hole.png}
+\includegraphics{images/volume_results/solder_laser_hole.png}
+\includegraphics{images/volume_results/binary_image_hole.png}
+
+
+
 
 %\begin{abstract}
 
