adding images to documentation

--- a/Inspection_Bot/Documentation/Documenation.tex
+++ b/Inspection_Bot/Documentation/Documenation.tex
@@ -11,7 +11,19 @@
 
 \section{Volume Analysis Setup}
 \includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0604.JPG}
+\includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0605.JPG}
+\includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0606.JPG}
+\includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0607.JPG}
+\includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0608.JPG}
+\includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0609.JPG}
+\includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0610.JPG}
+\includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0611.JPG}
+\includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0612.JPG}
+\includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0613.JPG}
+\includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0614.JPG}
 
+\includegraphics[scale=0.1]{images/volume_analysis_setup/IMG_0606.JPG}
+\includegraphics[scale=0.5]{images/volume_analysis_setup/laser-8}
 \section{Volume Image Processing}
 \includegraphics{images/volume_image_processing/led_image.png}
 \includegraphics{images/volume_image_processing/laser_image.png}
