adding images to documenation

--- a/Inspection_Bot/Documentation/Documenation.tex
+++ b/Inspection_Bot/Documentation/Documenation.tex
@@ -8,6 +8,16 @@
 
 \begin{document}
 \maketitle
+\section{Printer Path}
+\includegraphics{images/Path/original_path.png}
+\includegraphics{images/Path/best_found_path.png}
+
+
+\section{Chip Analysis Setup}
+\includegraphics{images/Segmentation/raw_image.png}
+\includegraphics{images/Segmentation/binary.png}
+\includegraphics{images/Segmentation/part_analysis.png}
+
 
 \section{Volume Analysis Setup}
 \includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0604.JPG}
@@ -21,9 +31,13 @@
 \includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0612.JPG}
 \includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0613.JPG}
 \includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0614.JPG}
-
+\includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0616.JPG}
+\includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0617.JPG}
+\includegraphics[scale=0.1,angle=270]{images/volume_analysis_setup/IMG_0618.JPG}
 \includegraphics[scale=0.1]{images/volume_analysis_setup/IMG_0606.JPG}
-\includegraphics[scale=0.5]{images/volume_analysis_setup/laser-8}
+\includegraphics{images/volume_analysis_setup/laser-8}
+
+
 \section{Volume Image Processing}
 \includegraphics{images/volume_image_processing/led_image.png}
 \includegraphics{images/volume_image_processing/laser_image.png}
@@ -31,14 +45,16 @@
 \includegraphics{images/volume_image_processing/binary_laser_image.png}
 \includegraphics{images/volume_image_processing/union_laser_led_binaries.png}
 
+
 \section{Volume Results}
 \includegraphics{images/volume_results/solder_led_hole.png}
 \includegraphics{images/volume_results/solder_laser_hole.png}
 \includegraphics{images/volume_results/binary_image_hole.png}
 
 
-
-
+\section{Classification}
+\includegraphics{images/Classification/data.png}
+\includegraphics{images/Classification/analized_data.png}
 %\begin{abstract}
 
 %\end{abstract}
