--- a/Inspection_Bot/Documentation/Documenation.tex
+++ b/Inspection_Bot/Documentation/Documenation.tex
@@ -8,6 +8,12 @@
 
 \begin{document}
 \maketitle
+
+\section{Computational Hardware}
+\includegraphics[scale=0.1,angle=270]{images/Computation_Resources/IMG_0619.JPG}
+\includegraphics[scale=0.1]{images/Computation_Resources/IMG_0620.JPG}
+\includegraphics[scale=0.1]{images/Computation_Resources/IMG_0621.JPG}
+\includegraphics[scale=0.1]{images/Computation_Resources/IMG_0622.JPG}
 \section{Printer Path}
 \includegraphics{images/Path/original_path.png}
 \includegraphics{images/Path/best_found_path.png}
@@ -50,11 +56,12 @@
 \includegraphics{images/volume_results/solder_led_hole.png}
 \includegraphics{images/volume_results/solder_laser_hole.png}
 \includegraphics{images/volume_results/binary_image_hole.png}
-
+Notice how the top of the white blob is thinner than the middle.  That is because the volume of solder at the top is less than the volume of solder at the middle. Also notice the black hole, this corresponds to a hole in the solder paste.
 
 \section{Classification}
 \includegraphics{images/Classification/data.png}
 \includegraphics{images/Classification/analized_data.png}
+
 %\begin{abstract}
 
 %\end{abstract}
